fix modal alignment/spacing

--- a/src/Components/Modal/modal.css
+++ b/src/Components/Modal/modal.css
@@ -178,10 +178,6 @@ body.modal-open {
   font-size: 14px;
 }
 
-.pokemon-stats {
-  margin-top: 1rem;
-}
-
 .flex-items >h3{
   font-weight: 500;
   color: #37474f;
@@ -196,3 +192,7 @@ body.modal-open {
   color: #BDBDBD;
 }
 
+.pokemon-description {
+  font-size: 16px;
+  line-height: 24px;
+}
